# Crims

./: .gitignore  .gitmodules  README.md  launch.sh
.github/workflows/: webpack.yml
client/: package-lock.json  package.json
client/config/: webpack.config.js
client/public/: index.html
client/src/: App.js  App.scss
client/src/components/modal/: modal.jsx  modal.module.scss
client/src/constants/: color.js  headerMap.js  manipulation.js  pages.js  sheet.js  sql.js  stat.js  url.js
client/src/pages/admin/: admin.jsx  admin.module.scss
client/src/pages/index/: index.jsx  index.module.scss
client/src/pages/query/: query.jsx  query.module.scss
client/src/pages/stat/: stat.jsx  stat.module.scss
client/src/styles/: mixins.scss  variable.scss
client/src/utils/: readFile.js  writeFile.js
doc/: api.md  csql.md  executor.md  gui.md  server.md
router/: router.js  test-socket.js
server/: .gitignore  CMakeLists.txt  README.md  build.sh
server/data/: .db  input.txt  租车订单信息表.xlsx  车辆分类信息表.xlsx  车辆基本信息表.xlsx
server/include/: analyze.h  ast.h  database.h  debug.h  define.h  delete.h  exec.h  executor.h  getopt.h  help.h  insert.h  json.h  log.h  regex.h  select.h  server.h  shell.h  start.h  strptime.h  update.h
server/lib/: parser.lib
server/sql-parser/: Makefile  README.md  ast.h  lexer.c  parser.lib  parser.tab.c  parser.tab.h  parser.y
server/src/: analyze.c  database.c  debug.c  define.c  delete.c  exec.c  executor.c  getopt.c  help.c  insert.c  json.c  log.c  main.c  regex.c  select.c  server.c  shell.c  start.c  strptime.c  update.c
